# CF-MU804

./: .gitignore
E710-module-Series-SDK/Demo/C++/UHFReader288VC/: UHFReader288VC.sln
E710-module-Series-SDK/Demo/C++/UHFReader288VC/UHFReader288VC/: Page1.cpp  Page1.h  Page2.cpp  Page2.h  ReadMe.txt  Reader.h  Resource.h  UHFReader288VC.cpp  UHFReader288VC.h  UHFReader288VC.rc  UHFReader288VC.vcproj  UHFReader288VCDlg.cpp  UHFReader288VCDlg.h  stdafx.cpp
E710-module-Series-SDK/Demo/C++/UHFReader288VC/UHFReader288VC/res/: UHFReader288VC.rc2
E710-module-Series-SDK/Demo/JAVA/testdemo-jni/src/uhf288/: rfid.java
E710-module-Series-SDK/Demo/android/UHFR2000 V3.2(as-4,8,16)/: build.gradle  import-summary.txt  local.properties
E710-module-Series-SDK/Demo/android/UHFR2000 V3.2(as-4,8,16)/app/: build.gradle
E710-module-Series-SDK/Demo/android/UHFR2000 V3.2(as-4,8,16)/app/src/main/: AndroidManifest.xml
E710-module-Series-SDK/Demo/c#/UHFReader288Demo_eng V5.0/: UHFReader288Demo.sln
E710-module-Series-SDK/SDK/VC/x32/: Reader.h  UHFReader288.h
UHFReader288MP/: .gitignore  UHFReader288MP.sln
UHFReader288MP/UHFReader288MP/: DeviceClass.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Setting.Designer.cs  UHFReader288MP.csproj
chafon_rfid/: CMakeLists.txt  LICENCE.md  README.md  example.c  rfid.c  rfid.h
rfid-inventory/chafon-esp32/: chafon-esp32.ino  chafon.ino  utils.ino
rfid-inventory/zebra-android/app/: build.gradle
rfid-inventory/zebra-android/app/src/main/: AndroidManifest.xml
rfid-inventory/zebra-android/gradle/wrapper/: gradle-wrapper.properties
(+43 files in other folders)
